--- a/.github/workflows/system_test.yml
+++ b/.github/workflows/system_test.yml
@@ -27,7 +27,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dev
+    - name: Install
       run: |
         python -m pip install --upgrade pip
-        pip install .[dev]
+        pip install .[test]
