--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,13 +30,5 @@ jobs:
     - name: Install
       run: |
         python -m pip install --upgrade pip
-        pip install -e .[tests]
-    - name: Run tests and coverage
-      run: make coverage
-    - name: Code coverage
-      uses: codecov/codecov-action@v3
-      with:
-        file: coverage.xml
-        flags: ${{ matrix.os }}-${{ matrix.python-version }}
-        name: codecov
-        fail_ci_if_error: false
+        pip install -e .[test]
+
